--- a/docs/syntax.tex
+++ b/docs/syntax.tex
@@ -14,6 +14,7 @@ MicroML has a full complement of operators. Table~\ref{table:operators}
         //  & integer division (produces integer) \\
         =   & assignment \\
         ==  & equality test \\
+        $/=$ & not equal \\
         $<$   & less than \\
         $<=$  & less than or equal \\
         $>$   & greater than \\
