--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -415,3 +415,20 @@ url = {http://www.cs.kent.ac.uk/pubs/2000/958},
     volume = {8},
     year = {1984}
 }
+
+@inbook{scott,
+    author = {Scott, Dana},
+    citeulike-article-id = {11840616},
+    citeulike-linkout-0 = {http://dx.doi.org/10.1016/s0049-237x(08)71262-x},
+    doi = {10.1016/s0049-237x(08)71262-x},
+    isbn = {9780444853455},
+    keywords = {lambda},
+    pages = {223--265},
+    posted-at = {2012-12-12 13:17:26},
+    priority = {2},
+    publisher = {Elsevier},
+    title = {{Lambda Calculus: Some Models, Some Philosophy}},
+    url = {http://dx.doi.org/10.1016/s0049-237x(08)71262-x},
+    volume = {101},
+    year = {1980}
+}
