--- a/docs/glossary.tex
+++ b/docs/glossary.tex
@@ -6,7 +6,7 @@
 
 \newglossaryentry{dependent types}
 {%
-    name={Dependent Type},
+    name={dependent types},
     description={A type whose definition depends on a value}
 }
 
@@ -18,13 +18,13 @@
 
 \newglossaryentry{parametric polymorphism}
 {%
-    name={Parametric Polymorphism},
+    name={parametric polymorphism},
     description={a way of writing generic functions so that they can handle any data type}
 }
 
 \newglossaryentry{duck typing}
 {%
-    name={Duck Typing},
+    name={duck typing},
     description={a form of runtime typing where a object is tested for its suitability for a task,
     rather than its exact nature}
 }
@@ -49,7 +49,7 @@
 
 \newglossaryentry{strict}
 {%
-    name={Strictness},
+    name={strict},
     description={a language is strict if it always evaluates all of the parameters passed to a
     function. A non-strict, or lazy, language, only evaluates what is specifically required}
 }
@@ -62,7 +62,7 @@
 
 \newglossaryentry{totality}
 {%
-    name={Total function},
-    description={a function which has a legal output for every legal input, i.e.\ an output is
+    name={totality},
+    description={a function is \textit{total} which has a legal output for every legal input, i.e.\ an output is
     defined for all possible input}
 }
